--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -14,11 +14,11 @@
 </title>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-  <a class="navbar-brand" href="#">Ebooking </a> <img src="{% static '/images/hotel.jpg' %}" height="70em" width="70em" alt="My image">
+  <a class="navbar-brand" href="#">Ebooking </a> <img src="{% static '/images/hotelv2.png' %}" height="70em" width="70em" alt="My image">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarText">
+  <div class="collapse navbar-collapse" id="navbarText" style="padding-left:2em;">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only"></span></a>
