created some templates

--- a/ebooking/content/templates/home.html
+++ b/ebooking/content/templates/home.html
@@ -28,7 +28,7 @@
             </div>
         
 
-        <button type="button" class="btn btn-primary" style="display:block;">Inchiriaza camere</button>
+        <a href="{% url 'rentrooms' hotel.id %}"><button type="button" class="btn btn-primary" style="display:block; "> Alege camere</button> </a> 
         
     </div>
    
