rent rooms front

--- a/ebooking/content/templates/home.html
+++ b/ebooking/content/templates/home.html
@@ -28,7 +28,7 @@
             </div>
         
 
-        <a href="{% url 'rentrooms' hotel.id %}"><button type="button" class="btn btn-primary" style="display:block; "> Alege camere</button> </a> 
+        <a href="{% url 'rentrooms' hotel.id %}"><button type="button" class="btn btn-primary" style="display:block; ">Check in</button> </a> 
         
     </div>
    
