--- a/ebooking/content/templates/emails/confirm_rent.html
+++ b/ebooking/content/templates/emails/confirm_rent.html
@@ -12,7 +12,7 @@
     <p>Your room's rent was successfully confirmed.
     Here are some details about the order:
     <br>
-    Rooms rented: {{ rooms_rented }}
+    Rooms rented: {{ rooms }}
     #TODO: Some context data
 
 
