finishing email async and refactoring django's microservices arhitecture

--- a/ebooking/content/templates/rent_rooms.html
+++ b/ebooking/content/templates/rent_rooms.html
@@ -16,12 +16,7 @@
 
             
             <img src="{{ room.image.url }}" alt="img">
-            
-               
-            
         </div>
-        
-
       
         <!-- Right Column -->
         <div class="right-column">
@@ -67,10 +62,10 @@
           <!-- Product Configuration -->
           
           
-          <!-- Product Pricing -->
+          <!-- Product Pricing -->``
           <div class="product-price">
-            <span>Pret:  LEI </span>
-            <a href="#" class="cart-btn">REZERVA CAMERA</a>
+            <span>Pret:100 LEI </span>
+            <a href="{% url 'reservation' room.id %}" class="cart-btn">REZERVA CAMERA</a>
           </div>
         </div>
 
