--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -25,9 +25,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only"></span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'add_hotel' %}">Add Hotel <span class="sr-only"></span></a>
-      </li>
     </ul>
       <a class="nav-link" style="color:black;" href="#">Login </a>
 
@@ -52,6 +49,10 @@
   {% endblock %}
 
   {% block roomrent %}
+  {% endblock %}
+
+  
+  {% block reservation %}
   {% endblock %}
 
 </body>
