--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -14,25 +14,29 @@
 </title>
 
 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <a class="navbar-brand" href="#">Management </a> <img src="{% static '/images/hotelv2.png' %}" height="70em" width="70em" alt="My image">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarText" style="padding-left:2em;">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only"></span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="http://localhost:8025/">Mail <span class="sr-only"></span></a>
-      </li>
-    </ul>
-      <a class="nav-link" style="color:black;" href="#">Login </a>
-
-  </div>
-</nav>
+  {% if request.user.is_authenticated %}
+    <div class="collapse navbar-collapse" id="navbarText" style="padding-left:2em;">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="http://localhost:8025/">Mail <span class="sr-only"></span></a>
+        </li>
+      </ul>
+    {% endif %}
+      {% if not request.user.is_authenticated %}
+        <a class="nav-link" style="color:black;" href="{% url 'accounts:log_in' %}">Login </a>
+      {% else %}
+        Hi<a class="nav-link" style="color:black;" href="{% url 'accounts:log_out' %}">Logout </a>
+      {% endif %}
+    </div>
+  </nav>
 {% comment %} 
 {% if messages %}
 <ul class="messages">
@@ -56,6 +60,12 @@
 
   
   {% block reservation %}
+  {% endblock %}
+
+  {% block login %}
+  {% endblock %}
+
+  {% block register %}
   {% endblock %}
 
 </body>
