--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -32,9 +32,10 @@
       </ul>
     {% endif %}
       {% if not request.user.is_authenticated %}
-        <a class="nav-link" style="color:black; margin-right:2; margin-left: auto; margin-right:2em;" href="{% url 'accounts:log_in' %}">Login </a>
+        <a class="nav-link" style="color:black; margin-right:2; margin-left: auto; margin-right:0em;" href="{% url 'accounts:log_in' %}">Login </a>
       {% else %}
-        Hi<a class="nav-link" style="color:black; margin-right:2; margin-left: auto; margin-right:2em;" href="{% url 'accounts:log_out' %}">Logout </a>
+     
+      <a style="padding-right:20px; margin-right:2; margin-left: auto; margin-right:3em;" >Hi, {{ request.user.first_name}} {{ request.user.last_name }}  </a> <a class="nav-link" style="color:black; padding-right:1em; " href="{% url 'accounts:log_out' %}">  Logout </a>
       {% endif %}
     </div>
   </nav>
@@ -66,7 +67,7 @@
   {% block login %}
   {% endblock %}
 
-  {% block register %}
+  {% block signup %}
   {% endblock %}
 
 </body>
