--- a/ebooking/content/templates/home.html
+++ b/ebooking/content/templates/home.html
@@ -25,8 +25,13 @@
 
             </div>
         <div style="text-align:center;">
-            <a href="{% url 'rentrooms' hotel.id %}" style="text-align:center;"><button type="button" class="btn btn-primary" style="display:no;">Check in</button> </a> 
+            {% if not request.user.profile.is_hotel_administrator  %}
+                <a href="{% url 'rentrooms' hotel.id %}" style="text-align:center;"><button type="button" class="btn btn-primary" style="display:no;">Check in</button> </a> 
+            {% else %}
+                <a href="{% url 'editrooms' hotel.id %}" style="text-align:center;"><button type="button" class="btn btn-primary" style="display:no;">Editeaza</button> </a> 
+            {% endif %}
         </div>
+
 
 
 
