Configuring emails and fixing error hanrdling

--- a/ebooking/accounts/templates/accounts/profile/change_password.html
+++ b/ebooking/accounts/templates/accounts/profile/change_password.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 
-{% load django-bootstrap5 %}
-{% load i18n %}
+{% load django_bootstrap5 %}
 {% load static %}
-{% block content %}
-    {% load sign_up %}
+{% block changepassword %}
 
     <div class="error_list" style="width:100%;">
         {% if form.errors %}
@@ -29,7 +27,7 @@
                 <div class="card">
 
                     <form class="box align-middle" method="post" style="border-radius: 25px;">
-                        <h4 style="color:white;">{% trans 'Schimbare parolă' %}</h4>
+                        <h4 style="color:white;">Schimbare parolă</h4>
                         <p class="text-muted">Vă rugăm să introduceți datele necesare</p>
 
                         {% csrf_token %}
@@ -37,7 +35,7 @@
                             {% if user_field.name == 'new_password1' %}
                                 <div class="input-icons" style="display:inline">
                                     <i class="fa fa-info-circle icon"
-                                       title="{% html_to_text user_field.help_text %}"></i>
+                                       title="user_field.help_text"></i>
                                     {{ user_field }}
                                 </div>
                             {% else %}
@@ -45,7 +43,7 @@
                             {% endif %}
                         {% endfor %}
                         <button type="submit" class="bn5 btn-success"
-                                aria-pressed="true">{% trans 'Modifică' %}</button>
+                                aria-pressed="true">Modifică</button>
                     </form>
                 </div>
             </div>
