--- a/ebooking/accounts/templates/accounts/restore_password.html
+++ b/ebooking/accounts/templates/accounts/restore_password.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %}
 
-{% load django-bootstrap5 %}
-{% load i18n %}
+{% load static %}
 
-{% block content %}
+{% load django_bootstrap5 %}
+
+{% bootstrap_css %}
+
+{% bootstrap_javascript %}
+
+{% bootstrap_messages %}
+
+{% block restore_password %}
 
     <div class="container" style="color:white;">
         <div class="row">
@@ -25,7 +32,7 @@
                         {% csrf_token %}
                         {% bootstrap_form form %}
 
-                        <button type="submit" class="bn5" aria-pressed="true">{% trans 'Resetare' %}</button>
+                        <button type="submit" class="bn5" aria-pressed="true">Resetare</button>
                     </form>
                 </div>
             </div>
