--- a/ebooking/accounts/templates/accounts/restore_password_confirm.html
+++ b/ebooking/accounts/templates/accounts/restore_password_confirm.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
-{% load django-bootstrap5 %}
+{% load django_bootstrap5 %}
 {% load i18n %}
 {% load static %}
-{% block content %}
+{% block restore_password_confirm %}
+
+{% bootstrap_messages %}
+
     {% load sign_up %}
     <link href="{% static 'css/sign_up.css' %}" rel="stylesheet">
 
@@ -40,19 +43,9 @@
                                 {% csrf_token %}
                                 <h4>Resetați-vă parola</h4>
                                 <p class="text-muted">Vă rugăm introduceți datele pentru resetarea parolei</p>
-                                {% for field in form %}
-                                    {% if field.name == 'new_password1' %}
-                                        <div class="input-icons" style="display:inline">
-                                            <i class="fa fa-info-circle icon"
-                                               title="{% html_to_text field.help_text %}"></i>
-                                            {{ field }}
-                                        </div>
-                                    {% else %}
-                                        {{ field }}
-                                    {% endif %}
-                                {% endfor %}
+                                {% bootstrap_form form %}
 
-                                <button type="submit" class="bn5" aria-pressed="true">{% trans 'Resetare' %}</button>
+                                <button type="submit" class="bn5" aria-pressed="true">Resetare</button>
 
                             </form>
                         </div>
@@ -62,7 +55,7 @@
         </div>
     {% else %}
         <div class="alert alert-danger">
-            {% trans 'Link-ul este invalid sau a expirat. Vă rugăm solicitați din nou resetarea parolei.' %}
+           Link-ul este invalid sau a expirat. Vă rugăm solicitați din nou resetarea parolei.
         </div>
     {% endif %}
 
