--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -70,4 +70,16 @@
   {% block signup %}
   {% endblock %}
 
+  {% block changeprofile %}
+  {% endblock %}
+
+  {% block changepassword %}
+  {% endblock %}
+
+  {% block restore_password %}
+  {% endblock %}
+  
+  {% block restore_password_confirm %}
+  {% endblock %}
+
 </body>
