--- a/ebooking/accounts/templates/accounts/log_in.html
+++ b/ebooking/accounts/templates/accounts/log_in.html
@@ -9,8 +9,8 @@
 {% bootstrap_css %}
 
 {% bootstrap_javascript %}
-
-{% bootstrap_messages %}
+{% comment %} 
+{% bootstrap_messages %} {% endcomment %}
 
     <link href="{% static 'css/login.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
