edit room basics

--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -60,7 +60,9 @@
   {% block roomrent %}
   {% endblock %}
 
-  
+  {% block edit_room %}
+  {% endblock %}
+
   {% block reservation %}
   {% endblock %}
 
