--- a/ebooking/content/templates/home.html
+++ b/ebooking/content/templates/home.html
@@ -28,7 +28,7 @@
             {% if not request.user.profile.is_hotel_administrator  %}
                 <a href="{% url 'rentrooms' hotel.id %}" style="text-align:center;"><button type="button" class="btn btn-primary" style="display:no;">Check in</button> </a> 
             {% else %}
-                <a href="{% url 'editrooms' hotel.id %}" style="text-align:center;"><button type="button" class="btn btn-primary" style="display:no;">Editeaza</button> </a> 
+                <a href="{% url 'editrooms' hotel.id %}" style="text-align:center;"><button type="button" class="btn btn-primary" style="display:no;">Vezi camere</button> </a> 
             {% endif %}
         </div>
 
