Admin functionalities implemented

--- a/ebooking/accounts/templates/accounts/sign_up.html
+++ b/ebooking/accounts/templates/accounts/sign_up.html
@@ -38,7 +38,7 @@
                             {% bootstrap_form user_form %}
                             {% bootstrap_form profile_form %}
 
-                            <button type="submit" class="bn5" aria-pressed="true">Creare cont</button>
+                            <button type="submit" class="btn btn-primary" aria-pressed="true">Creare cont</button>
                         </form>
                     </div>
                 </div>
