--- a/ebooking/content/assets/css/rent_rooms.css
+++ b/ebooking/content/assets/css/rent_rooms.css
@@ -6,7 +6,7 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 .container {
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 15px;
     display: flex;
