--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -26,6 +26,16 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only"></span></a>
         </li>
+      
+        {% if request.user.is_authenticated %}
+          {% with profile=request.user.profile %}
+          {% if profile.is_hotel_administrator or request.user.is_superuser %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'reservation:hotel_reservations' %}">Rezervari <span class="sr-only"></span></a>
+            </li>
+          {% endif %}
+         {% endwith %}
+      {% endif %}
         <li class="nav-item active">
           <a class="nav-link" href="http://localhost:8025/">Mail <span class="sr-only"></span></a>
         </li>
@@ -66,6 +76,15 @@
   {% block reservation %}
   {% endblock %}
 
+  {% block add_reservation %}
+  {% endblock %}
+
+  {% block edit_reservation %}
+  {% endblock %}
+
+  {% block hotel_reservation %}
+  {% endblock %}
+
   {% block login %}
   {% endblock %}
 
@@ -89,6 +108,6 @@
 
   {% block delete_room %}
   {% endblock %}
-
+  
 
 </body>
