--- a/ebooking/content/templates/edit_rooms.html
+++ b/ebooking/content/templates/edit_rooms.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container">
-    <h1>Hotel Rooms</h1>
+    <h1 style="padding:1em;">Hotel Rooms</h1>
     <table class="table">
       <thead>
         <tr>
