--- a/ebooking/accounts/templates/accounts/log_in.html
+++ b/ebooking/accounts/templates/accounts/log_in.html
@@ -30,6 +30,7 @@
                     {% endif %}
 
                     <form class="box" method="post" style="padding:2em; ">
+                        <a style="margin-left:2em;"  >Management Hotelier </a> <img src="{% static '/images/hotelv2.png' %}" height="70em" width="70em" alt="My image">
                         {% csrf_token %}
                         <h2>Autentificare</h2>
                         <p class="text-muted">Vă rugăm introduceți datele pentru autentificare.</p>
