--- a/ebooking/content/templates/rent_rooms.html
+++ b/ebooking/content/templates/rent_rooms.html
@@ -66,7 +66,7 @@
         
       </div>
     {% empty %}
-      <div class="col-md-12">No rooms available.</div>
+      <div class="col-md-12"><b>No rooms available.</b></div>
     {% endfor %}
   </div>
 </div>
