--- a/ebooking/reservation/templates/edit_reservation.html
+++ b/ebooking/reservation/templates/edit_reservation.html
@@ -12,12 +12,12 @@
 {% bootstrap_messages %}
 
 {% block edit_reservation %}
-
-  <h1>Editeaza rezervarea </h1> 
+  <div class="container"> 
+  <h1 style="padding:1em;">Editeaza rezervarea </h1> 
   <form method="post" enctype="multipart/form-data">
 {% csrf_token %}
   {% bootstrap_form form %}
     <button type="submit" class="btn btn-primary">Salveaza</button>
   </form>
-
+</div>
 {% endblock %}
