finishing filters and styling refactoring

--- a/ebooking/content/templates/base.html
+++ b/ebooking/content/templates/base.html
@@ -6,12 +6,11 @@
 
 {% bootstrap_javascript %}
 
-{% bootstrap_messages %}
 
 
 <!DOCTYPE html>
 <title>
-    Ebooking: {{ request.path }}
+    Ebooking
 </title>
 
 {% if request.path != '/accounts/log-in/' and request.path != '/accounts/sign-up/' %}
