--- a/ebooking/content/templates/reviews.html
+++ b/ebooking/content/templates/reviews.html
@@ -11,6 +11,7 @@
 
 {% block reviews %}
 
+{% bootstrap_messages %}
 
 <div class="container">
     <h1 style="padding:1em;">Reviews for {{ hotel.name }}</h1>
@@ -21,7 +22,7 @@
           <thead>
             <tr>
               <th>Rating</th>
-              <th>Text</th>
+              <th>Observatii</th>
               <th>User</th>
             </tr>
           </thead>
@@ -40,7 +41,7 @@
         {% endif %}
         <div class="row justify-content-start">
           <div class="col-auto">
-            <a href="{% url 'add_review' hotel_id=hotel_id %}" class="btn btn-primary">Add Review</a>
+            <a href="{% url 'add_review' hotel_id=hotel.id %}" class="btn btn-primary">Add Review</a>
           </div>
         </div>
       </div>
