--- a/ebooking/accounts/templates/accounts/log_in.html
+++ b/ebooking/accounts/templates/accounts/log_in.html
@@ -9,8 +9,8 @@
 {% bootstrap_css %}
 
 {% bootstrap_javascript %}
-{% comment %} 
-{% bootstrap_messages %} {% endcomment %}
+
+{% bootstrap_messages %}
 
     <link href="{% static 'css/login.css' %}" rel="stylesheet">
 
@@ -40,11 +40,7 @@
                             <button type="submit" class="btn btn-primary " aria-pressed="true">Conectare</button>
                         </div>  
                         <div style="display: inline-block; padding-top:2em;">
-                        <a class="btn btn-secondary" href="{% url 'accounts:sign_up' %}">Creare cont</a>
-                         
-                        <a class="btn btn-secondary" href="{% url 'accounts:restore_password' %}">Resetare
-                                    parolă</a>
-                           
+                        <a class="btn btn-secondary" href="{% url 'accounts:sign_up' %}">Creare cont</a>                    
                         </div>
                       
                     </form>
