--- a/ebooking/accounts/templates/accounts/profile/change_password.html
+++ b/ebooking/accounts/templates/accounts/profile/change_password.html
@@ -1,8 +1,16 @@
 {% extends 'base.html' %}
 
-{% load django_bootstrap5 %}
 {% load static %}
+
 {% block changepassword %}
+
+{% load django_bootstrap5 %}
+
+{% bootstrap_css %}
+
+{% bootstrap_javascript %}
+
+{% bootstrap_messages %}
 
     <div class="error_list" style="width:100%;">
         {% if form.errors %}
@@ -31,17 +39,7 @@
                         <p class="text-muted">Vă rugăm să introduceți datele necesare</p>
 
                         {% csrf_token %}
-                        {% for user_field in form %}
-                            {% if user_field.name == 'new_password1' %}
-                                <div class="input-icons" style="display:inline">
-                                    <i class="fa fa-info-circle icon"
-                                       title="user_field.help_text"></i>
-                                    {{ user_field }}
-                                </div>
-                            {% else %}
-                                {{ user_field }}
-                            {% endif %}
-                        {% endfor %}
+                        {% bootstrap_form form %}
                         <button type="submit" class="bn5 btn-success"
                                 aria-pressed="true">Modifică</button>
                     </form>
