--- a/ebooking/accounts/templates/accounts/profile/change_profile.html
+++ b/ebooking/accounts/templates/accounts/profile/change_profile.html
@@ -1,8 +1,16 @@
 {% extends 'base.html' %}
 
-{% load django_bootstrap5 %}
 {% load static %}
+
 {% block changeprofile %}
+
+{% load django_bootstrap5 %}
+
+{% bootstrap_css %}
+
+{% bootstrap_javascript %}
+
+{% bootstrap_messages %}
 
     <link href="{% static 'css/changeProfile.css' %}" rel="stylesheet">
 
