--- a/ebooking/reservation/templates/edit_reservation.html
+++ b/ebooking/reservation/templates/edit_reservation.html
@@ -11,9 +11,12 @@
 
 {% bootstrap_messages %}
 
+<link href="{% static 'css/edit_reservation.css' %}" rel="stylesheet">
+
 {% block edit_reservation %}
   <div class="container"> 
   <h1 style="padding:1em;">Editeaza rezervarea </h1> 
+  <div class="warning" title="Reservation date must be changed before 72 hours before the begin date!">ℹ</div>
   <form method="post" enctype="multipart/form-data">
 {% csrf_token %}
   {% bootstrap_form form %}
