mail bug fixes, changed some names

--- a/ebooking/accounts/templates/accounts/log_in.html
+++ b/ebooking/accounts/templates/accounts/log_in.html
@@ -42,8 +42,8 @@
                         <div style="display: inline-block; padding-top:2em;">
                         <a class="btn btn-secondary" href="{% url 'accounts:sign_up' %}">Creare cont</a>                    
                         </div>
-                      
                     </form>
+                    <a  href="{% url 'accounts:restore_password' %}">Ai uitat parola?</a>  
                 </div>
             </div>
         </div>
