--- a/ebooking/accounts/templates/accounts/sign_up.html
+++ b/ebooking/accounts/templates/accounts/sign_up.html
@@ -41,6 +41,8 @@
 
                             <button type="submit" class="btn btn-primary" aria-pressed="true">Creare cont</button>
                         </form>
+                        <a class="btn btn-secondary" href="{% url 'accounts:restore_password' %}">Ai uitat parola?</a>  
+
                     </div>
                 </div>
             </div>
